# illuminatrix

./: DmxLightSystem.py  InputSystem.py  JackSoundSystem.py  KBHit.py  PrintLightSystem.py  README.md  README.md.bak  SoundSystem.py  SystemFactory.py  TODO.md  TowerController.py  WebsocketSimulation.py  colors.py  constants.py  game_with_jack.py  jack_first_mixer.py  jack_game_architecture.py  play.py  pyproject.toml
audio_experiments/: jack_register_all_possible_callbacks.py
audio_experiments/jack_game_architecture_experiments_notworkning/: game_with_jack.py  jack_game.py
audio_experiments/useful/: stereo_to_8ch.py  (+1 more)
bases/: BaseSystem.py  InputSystem.py  LightSystem.py  SoundSystem.py
components/: Tower.py  TowerController.py
constants/: colors.py
docs/: Connect Raspberry Pi to GitHub.md  Get HiFiBerry working on Raspberry Pi.md  Get Jack working with Python.md  Get a basic Jack mixer (via SDL3 and other things).md  Jack Mixer part 2.md  Setup Raspberry Pi.md  Welcome.md
experiments/: midi_chords.py  midi_sine.py  simon_fsm.py
games/: BaseGame.py  BlinkGame.py  ColorCycle.py  DanoWhackAMole.py  LucyWhackAMole.py
sound_banks/: ffmpeg_commands.txt
src/: BaseGame.py  BaseSystem.py  BlinkGame.py  JackSoundSystem.py  KeyboardInputSystem.py  LightSystem.py  LucyWhackAMole.py  NullSoundSystem.py  PrintGame.py  PrintInputSystem.py  PrintLightSystem.py  PrintSoundSystem.py  SoundSystem.py  SystemFactory.py  Tower.py  TowerController.py  WebsocketSimulation.py  constants.py  play.py  utils.py
systems/: SystemFactory.py
utils/: KBHit.py  utils.py
(+25 files in other folders)
